--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node src/app.ts"
+    "document": "ts-node src/document.ts"
   },
   "dependencies": {
     "googleapis": "^80.1.0"
