Script for interfacing with Google Sheets

--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "document": "ts-node src/document.ts"
+    "document": "ts-node src/document.ts",
+    "sheet": "ts-node src/sheet.ts"
   },
   "dependencies": {
     "googleapis": "^80.1.0"
   },
   "devDependencies": {
     "@types/node": "^16.0.0",
+    "dotenv": "^10.0.0",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.5"
   }
